--- a/src/css/button.css
+++ b/src/css/button.css
@@ -1,10 +1,27 @@
-@media(max-width:425px){
+@media(max-width:426px){
     .button-wrapper {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    .button-text {
         /* border : 1px solid black; */
         background-color: #EAEAEA;
         padding : 5px 20px;
         cursor: pointer;
-        width : 80%;
+        width : 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .button-text:hover {
+        background-color: beige;
+    }
+    .button-set-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
 
