--- a/src/css/question.css
+++ b/src/css/question.css
@@ -1,4 +1,4 @@
-@media(max-width:425px){
+@media(max-width:426px){
     .question-wrapper {
         background-color: #EAEAEA;
         padding: 23px 13px;
@@ -8,4 +8,12 @@
     .question-text {
         font-size: 24px;
     }
+
+    .question-body-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+      }
 }
