--- a/src/css/start.css
+++ b/src/css/start.css
@@ -1,4 +1,4 @@
-@media(max-width:425px){
+@media(max-width:426px){
     .start-wrapper {
         
     }
