--- a/src/css/title.css
+++ b/src/css/title.css
@@ -1,4 +1,4 @@
-@media(max-width:425px){
+@media(max-width:426px){
     .title-wrapper {
         /* border : 1px solid black; */
         /* background-color: beige; */
